add dependency for unit test mock
Signed-off-by: Pablo Carle <pablo.carle@broadcom.com>