@@ -144,6 +144,7 @@ configure(subprojects.findAll {it.name != 'platform'}) {
         jvmArgs '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
         jvmArgs '--add-opens=java.base/javax.net.ssl=ALL-UNNAMED'
         jvmArgs '--add-opens=java.base/java.net=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED'
     }
 
     dependencies {
